Wording changes, fix stickiness on mobile web

--- a/client/common-components/CallToAction/CallToAction.module.scss
+++ b/client/common-components/CallToAction/CallToAction.module.scss
@@ -3,6 +3,7 @@
 
   &.isSticky {
     position: sticky;
+    position: -webkit-sticky;
     bottom: 0;
   }
 
